# chippy8

./: .flake8  .gitattributes  .gitignore  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst
src/chippy8/: __main__.py  cli.py  errors.py  fonts.py  interpreter.py  logging.py  messages.py  startup.py
tests/: test_chippy8.py  test_chippy8_opcodes.py  test_chippy8_options.py  test_chippy8_startup.py  test_loading_roms.py
