[tool.poetry]
name = "chippy8"
version = "0.1.0"
description = "A CHIP-8 Emulator and Interpreter"
authors = ["Jeff Nyman <jeffnyman@gmail.com>"]

[tool.poetry.scripts]
chippy8 = "chippy8.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
