[tool.poetry]
name = "chippy8"
version = "0.1.0"
description = "A CHIP-8 Emulator and Interpreter"
authors = ["Jeff Nyman <jeffnyman@gmail.com>"]

[tool.poetry.scripts]
chippy8 = "chippy8.__main__:main"

[tool.pytest.ini_options]
spec_test_format = "{result} {docstring_summary}"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["chippy8"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
exclude_lines = ["if __name__ == .__main__.:"]

[tool.coverage.html]
show_contexts = true
title = "ChipPy8 Test Coverage"

[tool.mypy]

[[tool.mypy.overrides]]
module = "nox.*,nox_poetry.*,expects.*"
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
pytest-spec = "^3.2.0"
pytest-cov = "^3.0.0"
coverage = {version = "^6.2", extras = ["toml"]}
expects = "^0.9.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
